crates/graphcal-eval/tests/snapshots/error_snapshots__error_key_subtraction.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
expression: rendered
---
dimension mismatch: expected a static Nat constant, found Int
    Diagnostic severity: error
Begin snippet for key_subtraction.gcl starting at line 1, column 1

snippet line 1: // Key subtraction is fallible at 0 and excluded from the additive fragment.
snippet line 2: node k: Key<Fin(3)> = key(Fin(3), 1) - 1;
    label at line 2, column 40: has dimension Int
diagnostic help: key subtraction is fallible at 0 and excluded; restructure additively or use to_int() and fin_key()
diagnostic code: graphcal::D001
