crates/graphcal-eval/tests/snapshots/error_snapshots__error_match_pattern_missing_fields.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
expression: rendered
---
missing field(s) ["epoch"] in match pattern for `Impulsive`
    Diagnostic severity: error
Begin snippet for match_pattern_missing_fields.gcl starting at line 9, column 1

snippet line 9: node result: Velocity = match @plan {
snippet line 10:     Impulsive(delta_v: bound_dv) => bound_dv,
    label at line 10, columns 5 to 32: incomplete pattern
snippet line 11:     Coast(duration: _) => 0.0 km/s,
diagnostic help: all constructor fields must be bound as `field: variable` or discarded with `field: _`
diagnostic code: graphcal::S009
