crates/graphcal-eval/tests/snapshots/error_snapshots__error_missing_variants.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
expression: rendered
---
missing variant(s) ["Insertion"] in map literal for index `Maneuver`
    Diagnostic severity: error
Begin snippet for missing_variants.gcl starting at line 1, column 1

snippet line 1: pub index Maneuver = { Departure, Correction, Insertion };
snippet line 2: param dv: Velocity[Maneuver] = {
    label starting at line 2, column 32: incomplete map literal
snippet line 3:     Maneuver#Departure: 2.46 km/s,
snippet line 4:     Maneuver#Correction: 0.5 km/s,
snippet line 5: };
    label ending at line 5, column 1: incomplete map literal
diagnostic help: map literals must cover all variants of the index
diagnostic code: graphcal::I003
